# UrlCanonicalExtractor

./: .replit  app.py  main.py  pyproject.toml  requirements.txt  utils.py
static/css/: style.css
static/js/: script.js
templates/: index.html
