[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
beautifulsoup4 = ">=4.13.3"
email-validator = ">=2.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
requests = ">=2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"